--- a/algebraic_multigrid.tex
+++ b/algebraic_multigrid.tex
@@ -149,7 +149,7 @@ their quality is checked. Obviously, this increases the cost of the coarsening
 and it is thus important that the coarsening is fast enough. Such an 
 algorithm does not control the size of the aggregates, and, therefore, it is 
 difficult to control the speed of coarsening. However, controlling the condition 
-number rather than the coarsening speed \textcolor{red}{can be a potent alternative approach}. By 
+number rather than the coarsening speed can be an effective alternative approach. By 
 monitoring the condition number, bad aggregates will not be created and, instead, 
 a few aggregates below the target size may be generated. This  
 does not affect the efficiency of the method in a noticeable way \cite{agmg2}. 
