--- a/transport.tex
+++ b/transport.tex
@@ -50,8 +50,8 @@ fluxes in all directions. The action of $\bs{L}^{-1}$ is often referred to as
 a transport sweep when discontinuous spatial approximations are
 employed because, for any direction $\bo_m$, the action of $\bs{L}_m^{-1}$ can
 be obtained by traversing the mesh (i.e., sweeping) in a specific ordering of
-the cells, \textcolor{red}{thus requiring only to solve a small linear system of equations,
-cell by cell}. The order in which the elements are solved constitutes the graph
+the cells, thus requiring that a small linear system of equations be solved 
+cell by cell. The order in which the elements are solved constitutes the graph
 of the sweep; for brevity and since this is not the focus of this article,
 we do not expand on situations where the graph presents dependencies
 (cycles). In such a case, these dependencies can either be lagged within the
