--- a/conclusions.tex
+++ b/conclusions.tex
@@ -27,13 +27,13 @@ Numerical experiments have been performed with meshes containing various types o
 grids with different polygon types for a given mesh and tests with degenerate polygons that mimic
 grids obtained in adaptive mesh refinement strategies. In these tests, MIP-DSA always performed effectively,
 reducing significantly the number of Source Iterations needed for convergence. 
-We noted that the effectiveness of MIP does not seem to \textcolor{red}{be affected by the meshes employed}. 
+We noted that the effectiveness of MIP does not seem to be affected by the meshes employed. 
 %
 The MIP-DSA  matrix is SPD and we solved the corresponding linear system of equations using a standard Conjugate
 Gradient method with different preconditioners. 
 Algebraic multigrid techniques were found to be the most effective preconditioner with AGMG being more than 20 times
 faster than unpreconditioned CG.
-We conclude that MIP-DSA is a \textcolor{red}{valued/valuable/worthy/worthwhile} option to
+We conclude that MIP-DSA is an effective  alternative to
 carry out diffusion synthetic accelerations for \sn transport problems on arbitrary polygonal grids and 
 grids obtained through mesh adaptivity.
 Future extensions of this work will include implementation of the technique in a 3D parallel \sn code.
