--- a/conclusions.tex
+++ b/conclusions.tex
@@ -5,10 +5,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 We have extended the Modified Interior Penalty (MIP) form of Diffusion Synthetic Acceleration (DSA) 
 to arbitrary polygonal grids discretized with Piece-Wise Linear Discontinuous finite elements. 
-The MIP-DSA solves employ the same discontinuous finite element trial spaces \textcolot{red}{as} 
-the discrete \sn transport equation.
-Since this DSA employs the same discontinuous finite element spaces as the \sn transport discretization,
-only a few addition elementary matrices need to be implemented. 
+The MIP-DSA equation employs the same discontinuous finite element trial spaces as 
+the spatial discretization of the \sn transport equation. As such, 
+%Since this DSA employs the same discontinuous finite element spaces as the \sn transport discretization,
+only a few additional elementary matrices need to be implemented to an existing \sn code. 
 %We proposed a simple way to compute the penalty coefficient on such grids. 
 %
 %%Numerical tests have been run on different grids with various types of polygonal cells,
@@ -19,24 +19,28 @@ only a few addition elementary matrices need to be implemented.
 %reduction of the numbers of unknowns and the possibility to use adaptive mesh 
 %refinement without having hanging nodes. 
 %
-Fourier analyses show that a PWLD discretization of MIP diffusion synthetic accelerator 
-is always stable and effective, including for cells with high-aspect ratio. 
+
+Fourier analyses show that the PWLD discretization of the MIP diffusion synthetic accelerator 
+is always stable and effective, including for cells with high-aspect ratios. 
 %
-Numerical experiments have been performed with meshes containing various types of polygonal cells
+Numerical experiments have been performed with grids containing various types of polygonal cells
 (random quadrilaterals, random polygons, hexagons), including
 grids with different polygon types for a given mesh and tests with degenerate polygons that mimic
 grids obtained in adaptive mesh refinement strategies. In these tests, MIP-DSA always performed effectively,
 reducing significantly the number of Source Iterations needed for convergence. 
 We noted that the effectiveness of MIP does not seem to be affected by the meshes employed. 
 %
-The MIP-DSA  matrix is SPD and we solved the corresponding linear system of equations using a standard Conjugate
-Gradient method with different preconditioners. 
-Algebraic multigrid techniques were found to be the most effective preconditioner with AGMG being more than 20 times
-faster than unpreconditioned CG.
-We conclude that MIP-DSA is an effective  alternative to
-carry out diffusion synthetic accelerations for \sn transport problems on arbitrary polygonal grids and 
+
+The MIP-DSA  matrix is Symmetric Positive Definite (SPD) and we solved the resulting linear system 
+of equations using a standard Conjugate Gradient method with different preconditioners. 
+Algebraic multigrid techniques (AGMG and ML) were found to be the most effective preconditioner, with AGMG 
+being more than 20 times faster than unpreconditioned CG.
+
+We conclude that MIP-DSA is an effective alternative to
+carry out diffusion synthetic accelerations for \sn radiation transport problems on arbitrary polygonal grids and 
 grids obtained through mesh adaptivity.
-Future extensions of this work will include implementation of the technique in a 3D parallel \sn code.
+Future extensions of this work will include the implementation of the MIP-DSA equations in a 3D parallel \sn code.
+
 % and full integration with   
 
 
