change title, added cover letter

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -56,7 +56,7 @@
 
 \begin{document}
 \title{Discontinuous Diffusion Synthetic Acceleration for \sn Transport on
-2D Polygonal Meshes}
+2D Arbitrary Polygonal Meshes}
 \author{} 
 \date{}
 \maketitle
