added ref for IP/SPD

--- a/biblio.bib
+++ b/biblio.bib
@@ -1022,4 +1022,40 @@
   howpublished = "Personal E-mail communication (2012-08-29)"
 }
 
+@Article{angular_multigrid_1d,
+  title = {{An Angular Multigrid Acceleration Technique for $S_n$ Equations with
+    Highly Forward-Peaked Scattering}},
+  author = {J.E. Morel and T.A. Manteuffel},
+  journal = {Nuclear Science and Engineering},
+  year = {1991},
+  volume = {107},
+  pages = {330-342},
+}
 
+@Article{angular_multigrid_bruno,
+  title = {{Angular Multigrid Preconditioner for Krylov-based Solution Techniques  applied to the Sn Equations with Highly Forward-Peaked Scattering}},
+  author = {Bruno Turcksin and Jean C. Ragusa and Jim E. Morel},
+  journal = {Transp. Theor. \& Stat. Phys.},
+  year = {2012},
+  volume = {41},
+  pages = {1-22},
+}
+
+@ARTICLE{Arnold1982,
+  author = {D. N. Arnold},
+  title = {An interior penalty finite element method with discontinuous elements},
+  journal = {SIAM J. Numer. Anal.},
+  year = {1982},
+  volume = {19},
+  pages = {742--760},
+  owner = {Yaqi Wang},
+  timestamp = {2009.02.03}
+}
+@incollection{arnold2000discontinuous,
+  title={Discontinuous Galerkin methods for elliptic problems},
+  author={Arnold, Douglas N and Brezzi, Franco and Cockburn, Bernardo and Marini, Donatella},
+  booktitle={Discontinuous Galerkin Methods},
+  pages={89--101},
+  year={2000},
+  publisher={Springer}
+}
