--- a/introduction.tex
+++ b/introduction.tex
@@ -18,7 +18,7 @@ for the following reasons: polygonal grids
 \een
 To illustrate these two points, first consider
 a hexagonal cell. Employing a PWLD discretization, such a cell possesses six unknowns. Using
-alternate discintinuous finite element discretizations that perform well in the thick diffusive limit, such as 
+alternate discontinuous finite element discretizations that perform well in the thick diffusive limit, such as 
 linear discontinuous on triangles and bilinear discontinuous on quadrangles, the same 
 hexagonal cell could be split into two quadrangles (for a total of 8 unknowns), two 
 triangles and one quadrangle (10 unknowns), or four triangles (12 unknowns). By inserting an 
