--- a/results.tex
+++ b/results.tex
@@ -230,15 +230,15 @@ The different linear solvers for MIP-DSA are compared in \Cref{comparison_hex}.
 %
 \begin{figure}[!htbp]
   \centering
-  \begin{subfigure}{0.45\textwidth}
+  \begin{subfigure}[b]{0.45\textwidth}
     \centering
     \includegraphics[width=\textwidth]{hexa_grid0000}
     \caption{Whole domain mesh}
   \end{subfigure}
-  \begin{subfigure}{0.40\textwidth}
+  \begin{subfigure}[b]{0.40\textwidth}
     \centering
     \includegraphics[width=\textwidth]{hexa_grid0001}
-    \caption{Zoom emphasizing triangular, rectangular, and hexagonal cells}
+    \caption{Zoom emphasizing the different cells used}
   \end{subfigure}
   \caption{Material zones for the heterogeneous test problem}
   \label{hex_zones}
