--- a/transport.tex
+++ b/transport.tex
@@ -126,7 +126,7 @@ finite elements, it may seem complicated to build the elementary transport
 matrices on an arbitrary polygonal cell, but the construction of such matrices
 can be greatly simplified using the notion of ``sub-cells'', where a ``sub-cell'',
 in 2D, is defined as the triangular cell linking an edge of the polygonal cell to its
-within-cell point. Note that these ``sub-cells'' are never created not stored as part of the 
+within-cell point. Note that these ``sub-cells'' are never created nor stored as part of the 
 polygonal grid. However, from a code implementation perspective, the computation of
 the elementary matrices on a polygonal cell is greatly simplified by looping over its sub-cells. 
 
