original cover letter and original MS

--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -1,4 +1,4 @@
-\documentstyle[11pt]{letter}
+\documentstyle[10pt]{letter}
 
 %%%%%% Letter Size Setup %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %        \addtolength{\textwidth}{2.5cm}     %% For longer or shorter text width
@@ -39,7 +39,7 @@ Some years ago (starting circa 2003), a piecewise linear \underline{\it disconti
 
 This manuscript presents a DSA scheme that is fully compatible with a PWLD discretization for arbitrary polygonal meshes. The DSA diffusion matrix is SPD, thus amenable to efficient solution techniques such as PCG and we present results with algebraic multigrid (AMG) as the preconditioner for CG. Our DSA scheme is based on a common interior penalty technique for the discontinuous finite element discretization of the diffusion equation.  Numerical results are provided for grids with arbitrary quadrangles, arbitrary polygons, a mesh with a juxtaposition of triangles, rectangles and hexagons, and a locally refined mesh as obtained in adaptive mesh refinement. Cells with high-aspect ratios are also considered and the proposed DSA scheme performed quite well, especially with CG preconditioned with AMG.
  
-This work follows closely prior works on DSA schemes for DFEM discretizations of the transport equation, for instance, works by Jim Morel (LANL, now TAMU), Jim Warsa (LANL), Teresa Bailey (LLNL), Marvin Adams (TAMU), and Todd Palmer (OSU).
+This work follows closely prior works on DSA schemes for DFEM discretizations of the transport equation, for instance, works by Jim Morel (LANL, now TAMU), Jim Warsa (LANL), Marv Adams (TAMU), Teresa Bailey (LLNL), Marvin Adams (TAMU), Ed Larsen (U Mich), and Todd Palmer (OSU), among (many) others.
 
 
 
